--- a/main.html
+++ b/main.html
@@ -3,13 +3,51 @@
 <html>
 
 <head>
+	<!-- CSS only -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 	<link rel="stylesheet" href="styles.css">
+	<title>Bootstrap GRIDs</title>
 </head>
 
 <body>
+	<h1>GRIDs</h1>
+
+	<div class="container">
+		<!-- row 1 -->
+		<div class="row">
+			<div class="col-4">
+				Row 1 col 1
+			</div>
+			<div class="col-8">
+				Row 1 col 2
+			</div>
+		</div>
+
+		<!-- row 2 -->
+		<div class="row justify-content-around">
+			<div class="col-4">
+				Row 2 col 1
+			</div>
+			<div class="col-8">
+				Row 2 col 2
+			</div>
+		</div>
+
+		<!-- row 3 -->
+		<div class="row">
+			<div class="col-4">
+				Row 3 col 1
+			</div>
+			<div class="col-8">
+				Row 3 col 2
+			</div>
+		</div>
+	</div>
+
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<script type="text/javascript" src="./script.js">
+	</script>
 
 </body>
 
