--- a/main.html
+++ b/main.html
@@ -3,51 +3,39 @@
 <html>
 
 <head>
-	<!-- CSS only -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-	<link rel="stylesheet" href="styles.css">
-	<title>Bootstrap GRIDs</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<h1>GRIDs</h1>
+    <!-- the entire body must be written by student -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
-	<div class="container">
-		<!-- row 1 -->
-		<div class="row">
-			<div class="col-4">
-				Row 1 col 1
-			</div>
-			<div class="col-8">
-				Row 1 col 2
-			</div>
-		</div>
 
-		<!-- row 2 -->
-		<div class="row justify-content-around">
-			<div class="col-4">
-				Row 2 col 1
-			</div>
-			<div class="col-8">
-				Row 2 col 2
-			</div>
-		</div>
+    <div class="container my-container">
+        <div class="row my-row">
+            <div class="col-md-4 col-sm-6 my-col r1c1">Row1 col1 </div>
+            <div class="col-md-8 col-sm-6 my-col r1c2">Row1 col2 </div>
+        </div>
+        <div class="row justify-content-between my-row">
+            <div class="col-md-4 offset-md-2 my-col r2c1">Row2 col1</div>
+            <div class="col-md-4 my-col r2c2">Row2 col2</div>
+        </div>
+        <div class="row justify-content-center my-row">
+            <div class="col-md-4 col-sm-6 my-col r3c1">Row3 col1</div>
+            <div class="col-md-4 col-sm-6 my-col r3c2">Row3 col2</div>
+        </div>
+    </div>
 
-		<!-- row 3 -->
-		<div class="row">
-			<div class="col-4">
-				Row 3 col 1
-			</div>
-			<div class="col-8">
-				Row 3 col 2
-			</div>
-		</div>
-	</div>
 
-	<!-- the entire body must be written by student -->
-	<script type="text/javascript" src="./script.js">
-	</script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+        crossorigin="anonymous"></script>
+
+
+
+    <script type="text/javascript" src="./script.js">
+    </script>
 
 </body>
 
